--- a/koha-tmpl/intranet-tmpl/prog/en/members/member.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/member.tmpl
@@ -1,9 +1,9 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Member search result<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha &rsaquo; Borrowers &rsaquo; Search Results<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-members.inc" -->
 
-<h1>Borrowers search results</h1>
+<h1>Borrowers &rsaquo; Search Results</h1>
 
     <form name="f" action="/cgi-bin/koha/members/member.pl" method="post">
         <label for="member">Name or Barcode</label>
