--- a/koha-tmpl/intranet-tmpl/prog/en/members/members-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/members-home.tmpl
@@ -1,19 +1,20 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Member Search<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha &rsaquo; Borrowers &rsaquo; Search<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-members.inc" -->
 
-<h1>Borrowers search</h1>
+<h1>Borrowers &rsaquo; Search</h1>
 
     <form name="f" action="/cgi-bin/koha/members/member.pl" method="post">
-        <label for="member">Name or Barcode</label>
+        <label for="member">Name or barcode</label>
         <input id="member" type="text" size="25" name="member" />
         <select name="orderby" id="orderby">
-            <option value="surname,firstname">Order by Last Name</option>
-            <option value="cardnumber">Order by Card Number</option>
+            <option value="surname,firstname">Order by last name</option>
+            <option value="cardnumber">Order by card number</option>
         </select>
         <input type="submit" value="Search" />
     </form>
+<h1>Borrowers &rsaquo; Browse</h1>
     <div>
         <a href="/cgi-bin/koha/members/member.pl?member=a">A</a>
         <a href="/cgi-bin/koha/members/member.pl?member=b">B</a>
