language cleaning for borrower module

--- a/koha-tmpl/intranet-tmpl/prog/en/members/deletemem.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/deletemem.tmpl
@@ -1,15 +1,15 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Cannot Delete Member<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Cannot Delete Borrower<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-members.inc" -->
-	<h3>Cannot Delete Member</h3>
+	<h3>Cannot Delete Borrower</h3>
 		<!-- TMPL_IF name="ItemsOnIssues" -->
-			Member has <!-- TMPL_VAR name="ItemsOnIssues" --> item(s) checked out.
+			Borrower has <!-- TMPL_VAR name="ItemsOnIssues" --> item(s) checked out.
 		<!-- /TMPL_IF -->
 		<!-- TMPL_IF name="charges -->
-			Member has <!-- TMPL_VAR name="charges" --> in fines.
+			Borrower has <!-- TMPL_VAR name="charges" --> in fines.
 		<!-- /TMPL_IF -->
 		<!-- TMPL_IF name="guarantees" -->
-			Member's record has child accounts attached.
+			Borrower's record has guaranteed accounts attached.
 		<!-- /TMPL_IF -->
 
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
