--- a/koha-tmpl/intranet-tmpl/prog/en/members/member.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/member.tmpl
@@ -6,11 +6,11 @@
 <h1>Borrowers &rsaquo; Search Results</h1>
 
     <form name="f" action="/cgi-bin/koha/members/member.pl" method="post">
-        <label for="member">Name or Barcode</label>
+        <label for="member">Name or barcode</label>
         <input id="member" type="text" size="25" name="member" />
         <select name="orderby" id="orderby">
-            <option value="surname,firstname">Order by Last Name</option>
-            <option value="cardnumber">Order by Card Number</option>
+            <option value="surname,firstname">Order by last name</option>
+            <option value="cardnumber">Order by card number</option>
         </select>
         <input type="submit" value="Search" />
     </form>
