--- a/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
@@ -61,10 +61,10 @@
             Account
         </a> 
         <a href="/cgi-bin/koha/members/pay.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->">
-            Pay Fines
+            Pay fines
         </a> 
         <a href="/cgi-bin/koha/members/readingrec.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->">
-            Reading Record
+            Reading record
         </a>
         <a href="javascript:confirm_reregistration();" onclick="javascript:document.form.value='y'" class="gest_borro_op">
         Renew
@@ -72,7 +72,7 @@
     </div>
     <div class="others">
         <!-- TMPL_IF NAME="CAN_user_parameters"-->
-        <a href="/cgi-bin/koha/tools/viewlog.pl?do_it=1&module=MEMBERS&action=MODIFY&object=<!-- TMPL_VAR NAME="borrowernumber"-->">Modification Log</a>
+        <a href="/cgi-bin/koha/tools/viewlog.pl?do_it=1&module=MEMBERS&action=MODIFY&object=<!-- TMPL_VAR NAME="borrowernumber"-->">Modification log</a>
         <!-- /TMPL_IF -->
     </div>
 </div>
@@ -95,13 +95,13 @@
 <!-- /TMPL_IF -->
 
 <fieldset>
-<legend>Borrower Information</legend>
-    <!-- TMPL_UNLESS NAME="I" --> <p><label>Civility:</label><!-- TMPL_VAR NAME="title" -->&nbsp;</p> 
-    <p><label>First Name:</label><!-- TMPL_VAR NAME="firstname" --></p><!-- /TMPL_UNLESS -->
+<legend>Borrower information</legend>
+    <!-- TMPL_UNLESS NAME="I" --> <p><label>Title:</label><!-- TMPL_VAR NAME="title" -->&nbsp;</p> 
+    <p><label>First name:</label><!-- TMPL_VAR NAME="firstname" --></p><!-- /TMPL_UNLESS -->
     <p>
-	<!-- TMPL_IF NAME="I" --><label>Organisation Name: </label><!-- TMPL_ELSE --><label>Last Name: </label><!-- /TMPL_IF --><!-- TMPL_VAR NAME="surname" -->
+	<!-- TMPL_IF NAME="I" --><label>Organisation name: </label><!-- TMPL_ELSE --><label>Last name: </label><!-- /TMPL_IF --><!-- TMPL_VAR NAME="surname" -->
     </p>
-    <!-- TMPL_UNLESS NAME="I" --><p><label>Othernames: </label><!-- TMPL_VAR NAME="othernames" --></p>
+    <!-- TMPL_UNLESS NAME="I" --><p><label>Other names: </label><!-- TMPL_VAR NAME="othernames" --></p>
     <p><label>Initials: </label><!-- TMPL_VAR NAME="initials" --></p><!-- /TMPL_UNLESS -->
     <p>
         <label>Address: </label>
@@ -125,34 +125,34 @@
 	<!-- /TMPL_UNLESS -->
     <!-- /TMPL_UNLESS -->
     <!-- TMPL_IF NAME="I" -->
-	<p><label>Organisation  Phone: </label><!-- TMPL_VAR NAME="phonepro" --></p>
-	<p><label>Organisation  Email: </label><!-- TMPL_VAR NAME="emailpro" --></p>
+	<p><label>Organisation phone: </label><!-- TMPL_VAR NAME="phonepro" --></p>
+	<p><label>Organisation email: </label><!-- TMPL_VAR NAME="emailpro" --></p>
     <!-- /TMPL_IF -->
     <!-- TMPL_UNLESS NAME="I"-->
-    <p><label>Home Phone: </label><!-- TMPL_VAR NAME="phone" --></p>
+    <p><label>Home phone: </label><!-- TMPL_VAR NAME="phone" --></p>
     <p><label>Cell phone: </label><!-- TMPL_VAR NAME="mobile" --></p>
     <p><label>Professional phone: </label><!-- TMPL_VAR NAME="phonepro" --></p>
     <!-- /TMPL_UNLESS -->
     <!-- TMPL_IF NAME="P"-->
-    <p><label>Professional  Phone: </label><!-- TMPL_VAR NAME="phone" --></p>
-    <p><label>Professionnal Email: </label><!-- TMPL_VAR NAME="mobile" --></p>
+    <p><label>Professional phone: </label><!-- TMPL_VAR NAME="phone" --></p>
+    <p><label>Professionnal email: </label><!-- TMPL_VAR NAME="mobile" --></p>
     <!-- /TMPL_IF -->  	
     <p><label>Fax: </label><!-- TMPL_VAR NAME="fax" --></p>
     <!-- TMPL_UNLESS NAME="I"-->
-    <p><label>E-mail Address:</label><!-- TMPL_VAR NAME="email" --></p>
-    <p><label>Date of Birth:</label><!-- TMPL_VAR NAME="dateofbirth" --></p>
+    <p><label>E-mail address:</label><!-- TMPL_VAR NAME="email" --></p>
+    <p><label>Date of birth:</label><!-- TMPL_VAR NAME="dateofbirth" --></p>
     <p><label>Sex:</label><!-- TMPL_VAR NAME="sex" --></p>
     <!-- /TMPL_UNLESS -->
 	
 </fieldset>
 <fieldset>
     <legend>Library use</legend>
-    <p><label>Borrower Number:</label><!-- TMPL_VAR NAME="borrowernumber" --></p>
+    <p><label>Borrower number:</label><!-- TMPL_VAR NAME="borrowernumber" --></p>
     <p><label>Category:</label><!-- TMPL_VAR NAME="categorycode" --></p>
-    <p><label>Registration Date:</label><!-- TMPL_VAR NAME="dateenrolled" --></p>
+    <p><label>Registration date:</label><!-- TMPL_VAR NAME="dateenrolled" --></p>
     <p><label>Relation:</label><!-- TMPL_VAR NAME="relationship" --></p>
     
-    <p><label>Expiration Date: </label>
+    <p><label>Expiration date: </label>
     <!-- TMPL_IF NAME="reregistration" -->
             <label class="reregistrinfo"><!-- TMPL_VAR NAME="dateexpiry" --></label>
     <!--TMPL_ELSE-->
@@ -160,23 +160,23 @@
     <!-- /TMPL_IF -->
     </p>
     
-    <p><label>Registration Branch:</label><!-- TMPL_VAR NAME="branchname" --> &nbsp;</p>
+    <p><label>Registration branch:</label><!-- TMPL_VAR NAME="branchname" --> &nbsp;</p>
 
     <!-- TMPL_IF NAME="printethnicityline" -->
     <p><label>Ethnicity:</label><!-- TMPL_VAR NAME="ethnicity" --> &nbsp;</p>
-    <p><label>Ethnicity Notes: </label><!-- TMPL_VAR NAME="ethnotes" --> &nbsp;</p>
+    <p><label>Ethnicity notes: </label><!-- TMPL_VAR NAME="ethnotes" --> &nbsp;</p>
     <!-- /TMPL_IF -->
 
     <p><label>Sort field 1: </label><!-- TMPL_VAR NAME="sort1" --> &nbsp;</p>
     <p><label>Sort field 2:</label><!-- TMPL_VAR NAME="sort2" --> &nbsp;</p>
     <p><label>OPAC login: </label><!-- TMPL_VAR name="userid" --> &nbsp;</p>
     <!-- TMPL_IF NAME="password" -->
-	<p><label>OPAC Password: </label>*******</p>
+	<p><label>OPAC password: </label>*******</p>
    <!--TMPL_ELSE -->
-	<p><label>OPAC Password: </label><span class="problem">Undefined &nbsp;</span></p> 
+	<p><label>OPAC password: </label><span class="problem">Undefined &nbsp;</span></p> 
    <!--/TMPL_IF --> 
-	<p><label>Circulation Notes:</label><!-- TMPL_VAR name="borrowernotes" --> &nbsp;</p>
-    <p><label>Borrower Message:</label><!-- TMPL_VAR NAME="opacnote" --> &nbsp;</p>
+	<p><label>Circulation notes:</label><!-- TMPL_VAR name="borrowernotes" --> &nbsp;</p>
+    <p><label>Borrower message:</label><!-- TMPL_VAR NAME="opacnote" --> &nbsp;</p>
 </fieldset>
 <!-- TMPL_UNLESS NAME="P" -->
 <!-- TMPL_UNLESS NAME="I" -->
@@ -208,13 +208,13 @@
 <fieldset>
     <legend>Fines &amp; Charges</legend>
     <!-- TMPL_IF name="totaldue" -->
-        <p>Total Due: <!-- TMPL_VAR NAME="totaldue" --></p>
+        <p>Total due: <!-- TMPL_VAR NAME="totaldue" --></p>
     <!-- TMPL_ELSE -->
-        <p>No Outstanding Charges</p>
+        <p>No outstanding charges</p>
     <!-- /TMPL_IF -->
 </fieldset>
     <div>
-    <h2>Items On Loan</h2>
+    <h2>Items on loan</h2>
     <form action="/cgi-bin/koha/reserve/renewscript.pl" method="post">
         <input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="borrowernumber" -->" />
     <table>
@@ -279,7 +279,7 @@
         </tr>
         <!-- /tmpl_loop -->
         <tr>
-            <td colspan="3">Total Replacement Cost:</td>
+            <td colspan="3">Total replacement cost:</td>
             <td><!-- TMPL_VAR NAME="totalprice" --></td>
             <td colspan="3">&nbsp;</td>
         </tr>
