fix spelling department improve English grammar in template

--- a/koha-tmpl/intranet-tmpl/prog/en/catalogue/advsearch.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/catalogue/advsearch.tmpl
@@ -1,4 +1,4 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Catalog: Advanced Search<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Catalogue: Advanced Search<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-catalogue.inc" -->
 
@@ -7,7 +7,7 @@
 <!-- TMPL_IF NAME="expanded_options" -->
 <h1>Advanced Search</h1>
 <!-- TMPL_ELSE -->
-<h1>Search the Library Catalog</h1>
+<h1>Search the Library Catalogue</h1>
 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF NAME="if_expanded_options_actually_worked" -->
@@ -38,7 +38,7 @@
 <!-- /REMOTE DATABASES -->
 <!-- /TMPL_IF -->
 <!-- TMPL_ELSE -->
-<h3>Search the Library Catalog</h3>
+<h3>Search the Library Catalogue</h3>
 <!-- /TMPL_IF -->
 
 <!-- BOOLEAN SEARCH OPTIONS -->
