--- a/koha-tmpl/intranet-tmpl/prog/en/circ/circulation.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/circulation.tmpl
@@ -112,7 +112,7 @@
     <legend>Search for a borrower</legend>
 
     <p>
-    <label for="findborrower">Enter borrower card number or partial last name: </label>
+    <label for="findborrower">Enter borrower card number or partial name: </label>
     <input id="findborrower" name="findborrower" type="text" size="40"/>
     </p>
 
