finish fixing spelling error on department

--- a/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_field_100.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/cataloguing/value_builder/unimarc_field_100.tmpl
@@ -320,9 +320,9 @@
                 <option value="b">etat/province</option>
             <!-- /TMPL_IF -->
             <!-- TMPL_IF name="f8c" -->
-                <option value="c" SELECTED>compte/departement</option>
+                <option value="c" SELECTED>compte/department</option>
             <!-- TMPL_ELSE -->
-                <option value="c">compte/departement</option>
+                <option value="c">compte/department</option>
             <!-- /TMPL_IF -->
             <!-- TMPL_IF name="f8d" -->
                 <option value="d"
@@ -332,10 +332,10 @@
             <!-- /TMPL_IF -->
             <!-- TMPL_IF name="f8e" -->
                 <option value="e"
-                SELECTED>multi-local(inter-departemental,
+                SELECTED>multi-local(inter-departmental,
                 etc. sous le niveau national)</option>
             <!-- TMPL_ELSE -->
-                <option value="e">multi-local(inter-departemental,
+                <option value="e">multi-local(inter-departmental,
                 etc. sous le niveau national)</option>
             <!-- /TMPL_IF -->
     
